[package]
name = "passkeep"
version = "0.1.0"
authors = ["Nicholas Bailey <nicholas.j.bailey91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
log = "0.4.14"
rand = "0.8.3"
thiserror = "1.0.23"
